# STELLOPT

./: .gitignore  CMakeLists.txt
LIBSTELL/: CMakeLists.txt
LIBSTELL/Sources/FFTpack/: cftfax.f  cftrig.f  fact.f  fftfax.f  fftrig.f
LIBSTELL/Sources/GMRes/: dPackgmres.f  gmres_lib.f
LIBSTELL/Sources/Miscel/: line_segment.f  profile_functions.f  read_namelist.f  second0.f
LIBSTELL/Sources/Modules/: biotsavart.f  bootsj_input.f  boundary_T.f  bsc_T.f  bsc_cdf.f  compression.f  coordinate_utilities.f  cyl_flux.f  date_and_computer.f  date_and_computer.f90  diagnostic_T.f  diagnostic_cdf.f  ez_hdf5.f90  file_opts.f  functions.f  integration_path.f  ipch_T.f  magnetic_response.f  math_utilities.f  mddc_T.f  mddc_cdf.f  mpi_params.f  mpi_sharmem.f90  optim_params.f  profiler.f  read_boozer_mod.f90  read_pies_mod.f90  read_response.f  read_response_nompi.f  read_wout_mod.f90  sxrch_T.f  thscte_T.f  v3_utilities.f  vmec_input.f
LIBSTELL/Sources/Optimization/: DE2_Evolve.f  DE_Evaluate.f  DE_Evolve.f  GENERIC_Evolve.f90  MAP.f90  MAP_LINEAR.f90  MAP_PLANE.f90  PSO_Evolve.f  de_mpi.f  de_parallel.f  fdjac_mod.f  fdjac_parallel.f  ga_evalout.f  ga_fitness_mpi.f  ga_fitness_parallel.f  ga_initial.f  lmdif.f  lmdif1.f  lmpar_mod.f  lmpar_parallel.f  multiprocess.f  myfork.f  stepopt_mp.f
MAKEGRID/: CMakeLists.txt
MAKEGRID/Sources/: coil_group_report.f  interactive_input.f  makegrid.f  makegrid_global.f  namelist_input_makegrid.f  task_circ_tor_grid.f  task_mgrid.f  task_mgrid_rs.f  write_mgrid.f
SHARE/: make_ubuntu.inc
VMEC2000/: CMakeLists.txt  readme.md
VMEC2000/Sources/General/: add_fluxes.f.original  add_fluxes.f90  bcovar.f  bcovar.f.original  blocktridiagonalsolver.f90  blocktridiagonalsolver_bst.f90  fbal.f  forces.f  funct3d.f  jacobian.f  lamcal.f  lamcal.noomp  precondn.f  realspace.f  scalfor.f  symforce.f  tomnsp_mod.f  totzsp_mod.f  vmec_main.f  vmec_params.f
VMEC2000/Sources/Hessian/: precon2d.f
VMEC2000/Sources/Initialization_Cleanup/: allocate_funct3d.f  allocate_ns.f  allocate_nunv.f  free_mem_funct3d.f  free_mem_ns.f  free_mem_nunv.f  pcurr.f  piota.f  pmass.f  profil1d.f  profil3d.f  profile_functions.f
VMEC2000/Sources/Input_Output/: eqfor.f  fileout.f  jxbforce.f  printout.f  read_indata.f  readin.f  write_dcon.f  wrout.f  wrout.f.eduardo  wrout.f.original
VMEC2000/Sources/NESTOR_vacuum/: bextern.f
VMEC2000/Sources/Splines/: banslv.f
VMEC2000/Sources/TimeStep/: eqsolve.f  evolve.f  parallel_include_module.f90  parallel_vmec_module.f90  runvmec.f  vmec_history.f
cmake-modules/: FindNetCDF.cmake
example_files/: input.flow_nonzero  input.flow_zero  input.with_splines
